Harmonized existing filters with field names (AssayId -> aeidFilter etc), added hitc filter
